tests/semantic_error/gv2_funcao_nao_declarada.g
/* erro: chamada de funcao nao declarada */
principal {
  escreva foo(1);
  novalinha;
}
